@@ -1,3 +1,9 @@
+mcabber (1.0.2-dev)
+
+ * 
+
+ -- Mikael, ?
+
 mcabber (1.0.1)
 
  * [PGP] Improved PGP-encryption support
